scss/apsolu.scss
/* ... */
.primary-navigation .navigation {
    margin-bottom: 4px; // Permet de ne pas déborder sur la bordure.
}

.card-title {
    font-weight: 300;
}

/* Styles pour la barre de défilement. */
// Firefox.
* {
    // scrollbar-width: thin;
    scrollbar-color: darken($custom-color-1, 10%) $gray-900;
}

// Chrome, Edge, and Safari.
*::-webkit-scrollbar {
    width: 10px;

    &-track {
        background: $gray-900;
    }

    &-thumb {
        background-color: $custom-color-1;
    }

}

// Colorpicker
input[type="color"] {
    -webkit-appearance: none;
    width: 30px;
    height: 30px;
    border: 4px solid $white;
    border-radius: 50%;
    padding: 0;
    overflow: hidden;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, .1);
}

.apsolu-colorpicker input[type="color"]::-webkit-color-swatch-wrapper {
    padding: 0;
}

.apsolu-colorpicker input[type="color"]::-webkit-color-swatch {
    border: none;
}

.pagelayout-login #page {
    background: unset; //Fait sauter le fond du container pour la page login Shibboleth.
}

.fcontainer {
    background: #f9f9f9;
    border-radius: 0.5em;
    padding: 1em;
}

.col-form-label {
    font-weight: bold;
}

#page.drawers {
    scrollbar-width: unset; // Permet à la scrollbar de reprendre sa taille par défaut.
}

#page-header {
    background: $white;
    padding: 1em;
    border-radius: 0.3em;
}

/* Fil d'ariane. */
.breadcrumb {
    font-size: 0.9em;
    padding: 0.5em;
    display: flex;
    flex-wrap: wrap;

    a {
        text-decoration: underline;
    }
}

.breadcrumb:not(:empty) {
    width: 100%;
    flex-wrap: wrap; // Emballe le fil pour éviter de casser les templates.
    margin-bottom: .5rem;
}

#footer-logo {
    height: 100px;
    max-height: 100px;

    &-1 {
        @extend #footer-logo;
    }

    &-2 {
        @extend #footer-logo;
    }

    &-3 {
        @extend #footer-logo;
    }
}

#apsolu-header-navbar .userinitials {
    font-size: .7rem;
    margin-bottom: 4px;
    width: 23px;
    height: 23px;
}

#page-mod-assign-grader h4 {
    font-size: 1em; // Evite un débordement sur la page d'évaluation des devoirs.
}

#page-footer {
    display: none;
}

/* DRAWERS */
#page,
#page.drawers {
    margin-top: unset;
}

:root {
    // Valeur pour définir la taille du tiroir des blocs et la marge du main content par rapport au tiroir.
    --drawer-right-width: 400px;
}

.drawer.drawer-right {
    min-width: var(--drawer-right-width);
    max-width: 100vw; // On permet au menu de mavigation de prendre la totalite du viewport au besoin (notamment pour le mobile).
}

#page.drawers.show-drawer-right {
    margin-right: var(--drawer-right-width);
}

.bg-dark {
    background-color: $apsolu-dark !important; /* stylelint-disable-line declaration-no-important */
}

a {
    color: $custom-color-3;
}

a:hover {
    color: lighten($custom-color-3, 10%);
}

.block_settings .block_tree [aria-expanded] > p::before,
.block_navigation .block_tree [aria-expanded] > p::before {
    margin-right: .25em;
}

/* ne pas afficher le usertour */
.usertour {
    display: none;
}

/* Améliore les sauts de colonnes dans la page de profil des utilisateurs en empêchant de scinder
les informations de manière abrupte. */
.apsolu-category-node {
    display: inline-block;
    width: 90%;
}

#page-user-profile .node_category #apsolu-othertrainings-ul {
    list-style: disc;
    padding-left: 1rem;
}

#page-user-profile .node_category #apsolu-othertrainings-ul li {
    margin-top: 0;
}

/* Réduit la taille de la popup pour filtrer les utilisateurs dans la partie administration. */
#page-admin-user .reportbuilder-filters-sidebar {
    max-height: 25rem;
}

/* Met en avant le bouton d'authentification. */
.login-container .login-identityproviders .login-identityprovider-btn {
    background-color: $custom-color-1;
    color: $apsolu-dark;
    font-size: 1.1em;
    font-weight: 600;
}

